--- a/app/NovaWeb/src/web.config
+++ b/app/NovaWeb/src/web.config
@@ -2,7 +2,7 @@
 <configuration>
 	<system.webServer>
 		<staticContent>
-			<remove fileExtension=".eof" />
+			<remove fileExtension=".eot" />
 			<mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
 			<remove fileExtension=".ttf" />
 			<mimeMap fileExtension=".ttf" mimeType="application/octet-stream" />
