Added OpenApiUser class

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Impl\DatabaseHelper.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="Impl\OpenApi.cs" />
+    <Compile Include="Impl\OpenApiUser.cs" />
     <Compile Include="Impl\UserDataModel.cs" />
     <Compile Include="JobModel\Enums\JobType.cs" />
     <Compile Include="JobModel\IJob.cs" />
