Fixed review points

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Impl\OpenApi.cs" />
     <Compile Include="Impl\OpenApiUser.cs" />
     <Compile Include="Impl\UserDataModel.cs" />
+    <Compile Include="IOpenApiUser.cs" />
     <Compile Include="JobModel\Enums\JobType.cs" />
     <Compile Include="JobModel\IJob.cs" />
     <Compile Include="JobModel\Impl\Job.cs" />
