--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -99,6 +99,7 @@
     <Compile Include="IAlmTarget.cs" />
     <Compile Include="Impl\AlmTarget.cs" />
     <Compile Include="Impl\DatabaseHelper.cs" />
+    <Compile Include="Impl\DeleteResultSet.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="Impl\OpenApi.cs" />
     <Compile Include="Impl\SvcComponents.cs" />
