Added DeleteUserTest file

--- a/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArtifactTests.cs" />
+    <Compile Include="DeleteUserTests.cs" />
     <Compile Include="LoginTests.cs" />
     <Compile Include="ProjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
