--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -101,7 +101,7 @@
     <Compile Include="IAlmTarget.cs" />
     <Compile Include="Impl\AlmTarget.cs" />
     <Compile Include="Impl\DatabaseHelper.cs" />
-    <Compile Include="Impl\DeleteResultSet.cs" />
+    <Compile Include="OpenApiModel\UserModel\DeleteUserResultSet.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="OpenApiModel\Services\OpenApi.cs" />
     <Compile Include="Impl\SvcComponents.cs" />
@@ -116,6 +116,8 @@
     <Compile Include="JobModel\Impl\AddJobResult.cs" />
     <Compile Include="ModelHelpers\ArtifactObserverHelper.cs" />
     <Compile Include="OpenApiModel\Services\IOpenApi.cs" />
+    <Compile Include="OpenApiModel\UserModel\GetGroupResultSet.cs" />
+    <Compile Include="OpenApiModel\UserModel\GetUserResultSet.cs" />
     <Compile Include="SearchServiceModel\Impl\ItemSearchResult.cs" />
     <Compile Include="IDeepCopyable.cs" />
     <Compile Include="Impl\ProjectRole.cs" />
