--- a/app/NovaWeb/package.json
+++ b/app/NovaWeb/package.json
@@ -96,7 +96,7 @@
     "script-loader": "~0.7.0",
     "style-loader": "^0.13.1",
     "tslint": "^3.15.0",
-    "tslint-eslint-rules": "^3.0.0",
+    "tslint-eslint-rules": "3.3.0",
     "tslint-loader": "^2.1.3",
     "typescript": "~2.0.3",
     "typings": "^2.0.0",
