--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Models\ArtifactBasicDetails.cs" />
     <Compile Include="Models\ArtifactsNavigationPath.cs" />
     <Compile Include="Models\ArtifactVersion.cs" />
+    <Compile Include="Models\AuthorHistory.cs" />
     <Compile Include="Models\ClientLogModel.cs" />
     <Compile Include="Models\Enums\ItemTypePredefined.cs" />
     <Compile Include="Models\Enums\ProjectSection.cs" />
