US4966: Added UpdateUsers model & positive tests. - Added Type, AssertAreEqual() and copy constructor to UserDataModel. - Simplified GetUserResultSet.

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Factories\SearchServiceFactory.cs" />
     <Compile Include="Factories\SvcComponentsFactory.cs" />
     <Compile Include="Factories\SvcSharedFactory.cs" />
+    <Compile Include="Factories\UserDataModelFactory.cs" />
     <Compile Include="IAlmTarget.cs" />
     <Compile Include="Impl\AlmTarget.cs" />
     <Compile Include="Impl\DatabaseHelper.cs" />
