--- a/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ProjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveArtifactTests.cs" />
+    <Compile Include="UpdateUserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CustomAttributes\CustomAttributes.csproj">
