--- a/blueprint-automationframework/Blueprint-Tests/Utilities/Utilities.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Utilities/Utilities.csproj
@@ -36,6 +36,10 @@
       <HintPath>..\..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
       <Private>True</Private>
@@ -54,6 +58,7 @@
     <Compile Include="CSharpUtilities.cs" />
     <Compile Include="DatabaseUtilities.cs" />
     <Compile Include="DateTimeUtilities.cs" />
+    <Compile Include="ObjectsCompare.cs" />
     <Compile Include="SerializationUtilities.cs" />
     <Compile Include="Factories\RandomGenerator.cs" />
     <Compile Include="Factories\WebExceptionFactory.cs" />
