Fixed couple of review points

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ArtifactModel\ITrace.cs" />
     <Compile Include="Common\Constants\BusinessLayerErrorCodes.cs" />
     <Compile Include="Common\Enums\InstanceAdminRole.cs" />
+    <Compile Include="Common\Enums\InstanceAdminRoleExtension.cs" />
     <Compile Include="Factories\OpenApiFactory.cs" />
     <Compile Include="Factories\ProjectRoleFactory.cs" />
     <Compile Include="Factories\SearchServiceFactory.cs" />
