US5412: Added a positive test for password reset and some database utilities.

--- a/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="JobResultFileTests.cs" />
     <Compile Include="JobsTests.cs" />
     <Compile Include="LicensesTests.cs" />
+    <Compile Include="PasswordResetTests.cs" />
     <Compile Include="ScheduleJobsTests.cs" />
     <Compile Include="ProjectNavigationPathTests.cs" />
     <Compile Include="SessionsTests.cs" />
