FileStorage Maintenance Job implementation

--- a/svc/db/FileStorage/FileStorage.csproj
+++ b/svc/db/FileStorage/FileStorage.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Functions\ValidateExpiryTime.sql" />
     <Content Include="Jobs\Blueprint_FileStorage_Maintenance.sql" />
+    <Content Include="Jobs\FileStorageMaintenanceJob.sql" />
     <Content Include="Migration\8.1.0.0\8.1.0.0.sql">
       <DependentUpon>8.1.0.0.tt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -121,6 +122,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>8.0.0.0.sql</LastGenOutput>
     </Content>
+    <Content Include="Procedures\DeleteExpiredFiles.sql" />
     <Content Include="Procedures\MakeFilePermanent.sql" />
     <Content Include="Scripts\CompatibilityLevel.sql" />
     <Content Include="Scripts\CreateSchemas.sql" />
