Fixing broken UseCase test and refactoring RapidReview model to look more like development.

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -111,6 +111,7 @@
     <Compile Include="IAlmTarget.cs" />
     <Compile Include="Impl\AlmTarget.cs" />
     <Compile Include="Impl\DatabaseHelper.cs" />
+    <Compile Include="NovaModel\Components\RapidReview\UseCase.cs" />
     <Compile Include="OpenApiModel\UserModel\Results\UserCallResultCollection.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="OpenApiModel\Services\OpenApi.cs" />
