--- a/svc/db/AdminStorage/AdminStorage.csproj
+++ b/svc/db/AdminStorage/AdminStorage.csproj
@@ -77,6 +77,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AdminStorage_Migration.sql</LastGenOutput>
     </Content>
+    <Content Include="Jobs\AdminStorageMaintenanceJob.sql" />
     <Content Include="Jobs\Blueprint_AdminStorage_Maintenance.sql" />
     <Content Include="Migration\7.0.1.0\7.0.1.0.sql">
       <DependentUpon>7.0.1.0.tt</DependentUpon>
