--- a/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="JobResultFileTests.cs" />
     <Compile Include="JobsTests.cs" />
     <Compile Include="LicensesTests.cs" />
-    <Compile Include="PasswordRecoveryTests.cs" />
+    <Compile Include="UsersTests\PasswordRecoveryRequestTests.cs" />
     <Compile Include="ScheduleJobsTests.cs" />
     <Compile Include="ProjectNavigationPathTests.cs" />
     <Compile Include="SessionsTests.cs" />
