--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -95,7 +95,7 @@
     <Compile Include="ArtifactModel\Impl\PropertyBase.cs" />
     <Compile Include="ModelHelpers\ArtifactStateWrapper.cs" />
     <Compile Include="ModelHelpers\ArtifactWrapper.cs" />
-    <Compile Include="ModelHelpers\IArtifactId.cs" />
+    <Compile Include="ModelHelpers\IHaveAnId.cs" />
     <Compile Include="NovaModel\Impl\ReferencedReviewArtifact.cs" />
     <Compile Include="ArtifactModel\Impl\SubArtifact.cs" />
     <Compile Include="ArtifactModel\Impl\UsersAndGroups.cs" />
