GetUsers with pagination implemented. GetUserDetails implemented. Unit testing. SqlPrivileges repository added to check user permissions.

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -121,13 +121,17 @@
     <Compile Include="Helpers\PasswordValidationHelper.cs" />
     <Compile Include="Helpers\UsersHelper.cs" />
     <Compile Include="Models\ApplicationSettings.cs" />
+    <Compile Include="Models\Data.cs" />
     <Compile Include="Models\EmailConfigInstanceSettings.cs" />
     <Compile Include="Models\InstanceItem.cs" />
+    <Compile Include="Models\Pagination.cs" />
     <Compile Include="Models\PasswordRecoveryToken.cs" />
+    <Compile Include="Models\QueryResult.cs" />
     <Compile Include="Models\ResetPasswordContent.cs" />
     <Compile Include="Models\ResetPostContent.cs" />
     <Compile Include="Models\TableSettings.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserAndTotal.cs" />
     <Compile Include="Models\UserIcon.cs" />
     <Compile Include="Repositories\ApplicationSettingsRepository.cs" />
     <Compile Include="Repositories\ISettingsRepository.cs" />
@@ -155,12 +159,14 @@
     <Compile Include="Repositories\IConfigRepository.cs" />
     <Compile Include="Repositories\ILdapRepository.cs" />
     <Compile Include="Repositories\ISqlInstanceRepository.cs" />
+    <Compile Include="Repositories\ISqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\ISqlSettingsRepository.cs" />
     <Compile Include="Repositories\ISqlUserRepository.cs" />
     <Compile Include="Repositories\Jobs\IJobsRepository.cs" />
     <Compile Include="Repositories\Jobs\JobsRepository.cs" />
     <Compile Include="Repositories\LdapRepository.cs" />
     <Compile Include="Repositories\SqlInstanceRepository.cs" />
+    <Compile Include="Repositories\SqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\SqlSettingsRepository.cs" />
     <Compile Include="Repositories\SqlConfigRepository.cs" />
     <Compile Include="Repositories\SqlUserRepository.cs" />
