--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -118,7 +118,9 @@
     <Compile Include="Helpers\JobsValidationHelper.cs" />
     <Compile Include="Helpers\LdapHelper.cs" />
     <Compile Include="Helpers\LoginInfo.cs" />
+    <Compile Include="Helpers\ModelValidator.cs" />
     <Compile Include="Helpers\PasswordValidationHelper.cs" />
+    <Compile Include="Helpers\PermissionsChecker.cs" />
     <Compile Include="Models\ApplicationSettings.cs" />
     <Compile Include="Models\EmailConfigInstanceSettings.cs" />
     <Compile Include="Models\InstanceItem.cs" />
@@ -153,12 +155,14 @@
     <Compile Include="Repositories\IConfigRepository.cs" />
     <Compile Include="Repositories\ILdapRepository.cs" />
     <Compile Include="Repositories\ISqlInstanceRepository.cs" />
+    <Compile Include="Repositories\ISqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\ISqlSettingsRepository.cs" />
     <Compile Include="Repositories\ISqlUserRepository.cs" />
     <Compile Include="Repositories\Jobs\IJobsRepository.cs" />
     <Compile Include="Repositories\Jobs\JobsRepository.cs" />
     <Compile Include="Repositories\LdapRepository.cs" />
     <Compile Include="Repositories\SqlInstanceRepository.cs" />
+    <Compile Include="Repositories\SqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\SqlSettingsRepository.cs" />
     <Compile Include="Repositories\SqlConfigRepository.cs" />
     <Compile Include="Repositories\SqlUserRepository.cs" />
